<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/article_published_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_item_published_date"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/article_source"/>

    <TextView
        android:id="@+id/article_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_item_article_source"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/source_color_orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/article_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recycler_item_article_title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:maxLines="3"
        android:layout_marginStart="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="3dp"
        app:layout_constraintTop_toBottomOf="@id/article_published_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/article_image"/>

    <TextView
        android:id="@+id/article_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recycler_item_article_description"
        android:textSize="12sp"
        android:textStyle="italic"
        android:maxLines="4"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/article_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/article_image"/>

    <ImageView
        android:id="@+id/article_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/article_source"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/recycler_item_content_description" />

</androidx.constraintlayout.widget.ConstraintLayout>