<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    
    <TextView
        android:id="@+id/article_detail_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_detail_source"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/article_detail_published_date"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/article_detail_published_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_detail_published"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/article_detail_image_view"
        android:layout_width="260dp"
        android:layout_height="260dp"
        app:layout_constraintTop_toBottomOf="@id/article_detail_source"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/article_detail_content_description" />

    <TextView
        android:id="@+id/article_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_detail_title"
        app:layout_constraintTop_toBottomOf="@id/article_detail_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/article_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_detail_description"
        app:layout_constraintTop_toBottomOf="@id/article_detail_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_web"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/fab_web"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_article"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/fab_add_to_favorite"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>